@@ -2,7 +2,7 @@
 #
 # Python-bindings open close testing script
 #
-# Copyright (C) 2011-2014, Joachim Metz <joachim.metz@gmail.com>
+# Copyright (c) 2011-2014, Joachim Metz <joachim.metz@gmail.com>
 #
 # Refer to AUTHORS for acknowledgements.
 #
@@ -40,6 +40,24 @@ list_contains()
 	return ${EXIT_FAILURE};
 }
 
+test_open_close()
+{ 
+	INPUT_FILE=$1;
+
+	rm -rf tmp;
+	mkdir tmp;
+
+	echo "Testing open close of input: ${INPUT_FILE}";
+
+	PYTHONPATH=../pyevt/.libs/ ${PYTHON} pyevt_test_open_close.py ${INPUT_FILE};
+
+	rm -rf tmp;
+
+	RESULT=$?;
+
+	return ${RESULT};
+}
+
 PYTHON="/usr/bin/python";
 
 if ! test -x ${PYTHON};
@@ -70,9 +88,9 @@ then
 else
 	IGNORELIST="";
 
-	if test -f "input/.pyevt/ignore";
+	if test -f "input/.libevt/ignore";
 	then
-		IGNORELIST=`cat input/.pyevt/ignore | sed '/^#/d'`;
+		IGNORELIST=`cat input/.libevt/ignore | sed '/^#/d'`;
 	fi
 	for TESTDIR in input/*;
 	do
@@ -82,15 +100,17 @@ else
 
 			if ! list_contains "${IGNORELIST}" "${DIRNAME}";
 			then
-				if test -f "input/.pyevt/${DIRNAME}/files";
+				if test -f "input/.libevt/${DIRNAME}/files";
 				then
-					TESTFILES=`cat input/.pyevt/${DIRNAME}/files | sed "s?^?${TESTDIR}/?"`;
+					TEST_FILES=`cat input/.libevt/${DIRNAME}/files | sed "s?^?${TESTDIR}/?"`;
 				else
-					TESTFILES=`ls ${TESTDIR}/*`;
+					TEST_FILES=`ls -1 ${TESTDIR}/* 2> /dev/null`;
 				fi
-				for TESTFILE in ${TESTFILES};
+				for TEST_FILE in ${TEST_FILES};
 				do
-					if ! PYTHONPATH=../pyevt/.libs/ ${PYTHON} pyevt_test_open_close.py ${TESTFILE};
+					BASENAME=`basename ${TEST_FILE}`;
+
+					if ! test_open_close "${TEST_FILE}";
 					then
 						exit ${EXIT_FAILURE};
 					fi
