@@ -53,6 +53,9 @@ Notes
 * %SystemRoot% expansion support for WINNT and WINNT35
   check if this is set in SOFTWARE\Microsoft\Windows NT\CurrentVersion\ ?
 
+20141004
+* update Python-bindings tests
+
 20140928
 * removed README.macosx
 * changes for project site move
